# discreettype

./: .gitignore  GEMINI.md  README.md  pyproject.toml  run.bat
data/snippets/: curated.json
src/typing_tool/: __init__.py  main.py
src/typing_tool/core/: session.py
src/typing_tool/storage/: github_api.py  history.py  models.py  snippets.py
src/typing_tool/ui/: app.py  menu.py  typing.py
tests/: test_github_api_randomness.py  test_github_refresh_flow.py  test_ide_navigation.py  test_ide_whitespace.py  test_menu_navigation.py  test_results_menu.py  test_session.py  test_snippet_normalization.py  test_typing_input.py
