[project]
name = "typing-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Antonis Valvis", email = "abn2226@yahoo.gr" }
]
requires-python = ">=3.14"
dependencies = [
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.13.4",
    "pygments>=2.20.0",
    "rich>=15.0.0",
    "requests>=2.32.3",
]

[build-system]
requires = ["uv_build>=0.11.13,<0.12.0"]
build-backend = "uv_build"
